# iris

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
.github/ISSUE_TEMPLATE/: feature-name.md  feature-request.md
.github/workflows/: iris-test.yml  rust.yml
crates/iris_db/: Cargo.toml
crates/iris_ecs/: Cargo.toml
crates/iris_ecs/src/: error.rs  lib.rs
crates/iris_gen/: Cargo.toml
crates/iris_gen/src/: error.rs  godot_tools.rs  lib.rs
crates/iris_gen/src/agent/: configs.rs  maestro.rs  memory.rs  mod.rs  model.rs  orca.rs  tools.rs
crates/iris_gen/src/rag/: data_scehmas.rs  mod.rs
crates/iris_gen/src/utils/: mod.rs  ollama_utils.rs
crates/iris_godot/: Cargo.toml
crates/iris_godot/src/: error.rs  lib.rs
crates/iris_godot/src/nodes/: iris.rs  mod.rs  npc.rs
crates/iris_utils/: Cargo.toml
crates/iris_utils/src/: error.rs  lib.rs
docs/: Emergent Dialogue and Quest Generation using LLMs.docx  Emergent Dialogue and Quest Generation using LLMs.tex  iris-high_level_architecture.drawio  ~$ergent Dialogue and Quest Generation using LLMs.docx
docs/Final Year Project/: 0001 Problem Description, Context and Motivation.md  0005 Methodology.md  0006 Technology Review.md  0010 References.md
docs/Final Year Project/Additional Resources/: Deepseek-R1 Fine Tuning.md
docs/Final Year Project/Design Documentation/: Conceptual Framework.md  Data Flow Diagrams.md  Gameplay Brainstorm.md  Iterative Design Cycle.md  Milestone Roadmap.md  System Architecture Diagram Update.md  System Architecture Diagram.md
docs/Final Year Project/Journal/: 20240920 Project Setup.md  20240926 Assets and Resources.md  20240930 Error Handling and Async Packages.md  20240930 Error Handling and Packages.md  20241001 Prelude File.md  20241003 High Level Architecture Diagram.md  20241008 Created Player Character.md  20241010 Created NPC Characters.md  20241021 Updating Player Movement and Added Animations.md  20241027 Dialogue Manager.md  20241105 Testing RAG Software and Implemented Asynchronous Generation.md  20241106 Refactoring Code for Better Structure.md  20241108 Fixed the Blocking of Main Thread when Generating Text.md  20241109 Fixed Asynchronous Issue and Adjusted Dialogue File.md  20241110 Created Smart Object File.md  20241111 Added Information about NPCs.md  20241111 Added Name, Profession and Description for NPCs.md  20241112 Refactored File Structure and Code.md  20241113 Made LLM Struct a Singleton.md  20241114 Created Dialogue Struct to Handle More Complex Infomration.md  20241114 Created Dialogue Struct to Serialize and Deserialize Data in Rust.md  20241219 Added and Started Report.md  20250112 Created and Updated Diagrams.md  20250112 Overhauled High Level Architecture Diagram and Created Iterative Design Architecture.md  20250114 Implemented User Choices and Dialogue Options.md  20250114 Wiped Develop Branch and Started Fresh  Develop Branch.md  20250115 Added GDUnit and Main Menus; Reworked Framework.md  20250116 Added Files to IRIS-GEN (llm.rs and vec_stores.rs).md  20250117 Added Memory to Project.md  20250118 Added Comments to LLM and Memory.md  20250118 Fixed Error Stack Not Being Able to Parse Errors.md  20250118 Fixed Error in LLMCharacter Which Was Crashing Godot Game Engine.md  20250118 Implemented Test Cases.md  20250118 Implemented a Basic Memory.md  20250119 Fixed Documentation Tests.md  20250119 Moved Integration Tests into Tests File.md
docs/Final Year Project/Journal Deprecated/: 20250116 Added Files to IRIS-GEN (llm.rs and vec_stores.rs).md  20250117 Added Memory to Project.md  20250118 Fixed Error Stack Not Being Able to Parse Errors.md  20250119 Fixed Documentation Tests.md
docs/Final Year Project/Research and Development/: 20250113 Model Fine Tuning.md  20250204 DeepSeek-R1 Fine Tuning.md
docs/Iris/: 0004 Literature Review.md
iris/: icon.svg.import  project.godot
iris-api/: Cargo.toml
iris-api/src/: error.rs  lib.rs  prelude.rs
iris-api/src/core/: dialogue.rs  dialogue_manager.rs  mod.rs  smart_npc.rs
iris-api/src/core/dialogue_system/: dialogue.rs
iris-api/src/core/llm/: embedding.rs  memory.rs  mod.rs  system_prompts.rs  vector_store.rs
iris-api/src/core/llm_npc/: mod.rs
iris-api/src/nodes/: llm_character_body_2d.rs  mod.rs
iris-game/: icon.svg.import  project.godot
iris-gen/: Cargo.toml
iris-gen/src/: error.rs  lib.rs  llm.rs  llm_character.rs  memory.rs  vec_store.rs
iris-gen/src/agent/: mod.rs  model.rs  orchestrator.rs
iris-gen/src/data/: mod.rs
iris-gen/src/llm_character/: mod.rs
iris-gen/src/model/: dialogue.rs  mod.rs
iris-gen/src/schemas/: dialogue.rs
iris-gen/src/utils/: generation_channels.rs  mod.rs  parse_json.rs
iris-gen/tests/: generated_dialogue.rs  parse_generated_dialogue.rs  test_generated_dialogue.rs  test_parse_generated_dialogue.rs
iris_data/npc_data/: Laurentiu.md  Mel.md  laurentiu.json  mel.json
iris_data/world_data/: adventure_guild.json  josephio_tavern.json
iris_game/: icon.svg.import  project.godot
tests/: .gitattributes
(+1320 files in other folders)
