[package]
name = "iris-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[rust.lint]
unused = true

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
ollama-rs = "0.2.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.89"
