[package]
name = "iris-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
ollama-rs = "0.2.1"
qdrant-client = "1.12.1"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.89"
