[package]
name = "iris-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# -- Godot Bindings
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
# -- LLM Libraries
ollama-rs = { version = "0.2.2", features = ["chat-history"] }
# -- Async
tokio = { version = "1.41.1", features = ["full"] }
# -- JSON Handling
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
# -- Others
derive_more = { version = "1.0.0-beta", features = ["from", "display"] }
once_cell = "1.20.2"
