[package]
name = "iris-gen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Godot API Library to Interact with Godot
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

# Error Handling Library
thiserror = "2.0.11"

# Async Library
tokio = { version = "1.43.0", features = ["full"] }

# Serialization and Deserialization Libraries
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"