[package]
name = "iris-gen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Godot API Bindings
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

# Ollama API
ollama-rs = "0.2.4"

# Vector Database

# Async
tokio = { version = "1.43.0", features = ["full"] }

# Serialization and Deserialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

# Error Handling
thiserror = "2.0.11"
