[package]
name = "iris_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.2.6", features = ["ollama-rs-macros"] }
ollama-rs-macros = "0.2.6"
reqwest = "0.12.12"
schemars = "0.8.22"
serde = "1.0.218"
thiserror.workspace = true
tokio = { version = "1.43.0", features = ["full"] }
