[package]
name = "iris_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.0", features = ["tool-implementations"] }
reqwest = "0.12.12"
schemars = "0.8.22"
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.219"
qdrant-client = "1.13.0"

thiserror.workspace = true
serde_json = "1.0.140"


