[package]
name = "iris_godot"
version = "0.1.0"
edition = "2024"

[lib]
name = "iris"
crate-type = ["cdylib"]

[dependencies]
# Internal Crates
iris_gen = { path = "../iris_gen" }
iris_utils = { path = "../iris_utils" }

# External Crates
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
thiserror.workspace = true
bevy_ecs = "0.15.3"
tokio = { version = "1.44.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
ollama-rs = "0.3.0"
ollama-rs-macros = "0.2.6"
